--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -58,42 +58,86 @@
 
 // Tablet and Desktop text styles
 
-.page-header{
-    font-size: 2rem;
-    line-height: 2.5rem;
-    font-weight: 600;
+@include tablet {
+    .page-header{
+        font-size: 2rem;
+        line-height: 2.5rem;
+        font-weight: 600;
+    }
+    
+    .sub-header{
+        font-size: 1.5rem;
+        line-height: 2rem;
+        font-weight: 600;
+    }
+    
+    .label-text, .button-text, .link-text{
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 600;
+    }
+    
+    .table-header{
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+        font-weight: 400;
+    }
+    
+    .body-large{
+        font-size: 1rem;
+        line-height: 1.75rem;
+        font-weight: 400;
+    }
+    .body-medium{
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 400;
+    }
+    .body-small{
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+        font-weight: 400;
+    }
 }
 
-.sub-header{
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 600;
-}
-
-.label-text, .button-text, .link-text{
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    font-weight: 600;
-}
-
-.table-header{
-    font-size: 0.75rem;
-    line-height: 1.125rem;
-    font-weight: 400;
-}
-
-.body-large{
-    font-size: 1rem;
-    line-height: 1.75rem;
-    font-weight: 400;
-}
-.body-medium{
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    font-weight: 400;
-}
-.body-small{
-    font-size: 0.75rem;
-    line-height: 1.125rem;
-    font-weight: 400;
+@include desktop {
+    .page-header{
+        font-size: 2rem;
+        line-height: 2.5rem;
+        font-weight: 600;
+    }
+    
+    .sub-header{
+        font-size: 1.5rem;
+        line-height: 2rem;
+        font-weight: 600;
+    }
+    
+    .label-text, .button-text, .link-text{
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 600;
+    }
+    
+    .table-header{
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+        font-weight: 400;
+    }
+    
+    .body-large{
+        font-size: 1rem;
+        line-height: 1.75rem;
+        font-weight: 400;
+    }
+    .body-medium{
+        font-size: 0.875rem;
+        line-height: 1.375rem;
+        font-weight: 400;
+    }
+    .body-small{
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+        font-weight: 400;
+    }
 }
