--- a/src/assets/components/Header/Header.scss
+++ b/src/assets/components/Header/Header.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         height: auto;
         width: 8rem;
-        margin: 1rem auto;
+        margin: 1.5rem auto;
     }
     &__nav {
         display: flex;
@@ -26,11 +26,13 @@
             justify-content: center;
             align-items: center;
             width: 50%;
-            padding: 1rem 0;
+            padding: .5rem 0;
+            color: $cloud;
 
         } :active, :hover {
             background: $instock-black;
             border-radius: 30px;
+            color: $white;
         }
     }
     @include tablet {
