--- a/src/pages/WarehousePage/WarehousePage.scss
+++ b/src/pages/WarehousePage/WarehousePage.scss
@@ -16,22 +16,28 @@
         background-color: $white;
         padding: 2rem 0 0 1.5rem;
         margin: 0;
+        
     }
 
     &__top {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding: 3.5vw 3.5vw 0 3.5vw;
+     
+        padding: 1rem 1rem 0 1rem;
 
     }
 
     &__search-bar {
         display: flex;
         flex-direction: row;
-        align-content: center;
+        padding: 0.3rem 1rem 0.3rem 1rem;
+        width: 100%;
+        justify-content: space-between;
 
-        border: 0.1rem solid $slate;
+        border: 0.063rem solid $slate;
+        border-radius: 1.875rem;
+        margin: 0 2rem 0 2rem;
     }
 
     &__input {
