Fix components folder and paths affected by the change

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/partials/breakpoints' as *;
-@use '../../../styles/partials/colors' as *;
+@use '../../styles/partials/breakpoints' as *;
+@use '../../styles/partials/colors' as *;
 
 .header {
     display: flex;
