--- a/src/pages/WarehousePage/WarehousePage.scss
+++ b/src/pages/WarehousePage/WarehousePage.scss
@@ -22,8 +22,8 @@
 
     &__top {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
      
         padding: 1rem 1rem 0 1rem;
 
@@ -32,13 +32,13 @@
     &__search-bar {
         display: flex;
         flex-direction: row;
-        padding: 0.5rem 1rem 0.5rem 1rem;
-        width: 100%;
+        padding: 0.3rem 1rem 0.3rem 1rem;
+        width: 75%;
         justify-content: space-between;
 
         border: 0.063rem solid $slate;
         border-radius: 1.875rem;
-        margin: 0 2rem 0 2rem;
+        margin: 0 2rem 1rem 2rem;
     }
 
     &__input {
@@ -51,5 +51,15 @@
         &:focus {
            outline: none;
         }
+    }
+
+    &__button {
+        border: none;
+        color: $white;
+        background-color: $instock-indigo;
+        padding: 0.5rem 0 0.5rem 0;
+        border-radius: 1.875rem;
+        width: 85%;
+        margin-bottom: 1.5rem;
     }
 }
