--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -6,4 +6,15 @@
 
     padding: 0 1rem 0 1rem;
     background-color: $light-grey;
+
+    &__header {
+        display: flex;
+        justify-content: space-around;
+
+    }
+
+    &__box {
+        display: flex;
+        // padding: 0 2rem 0 2rem;
+    }
 }
