--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,7 @@
         display: flex;
         list-style: none;
         padding: 0;
-        margin: 0 0 5rem 0;
+        margin: 0 0 1.5rem 0;
 
         &-item {
             display: flex;
@@ -27,6 +27,7 @@
             align-items: center;
             width: 50%;
             padding: .5rem 0;
+            font-size: .75rem;
             color: $cloud;
 
         } :active, :hover {
