--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 @use '../../styles/partials/breakpoints' as *;
 @use '../../styles/partials/colors' as *;
+@use '../../styles/partials/typography' as *;
 
 .header {
     display: flex;
@@ -19,7 +20,7 @@
         display: flex;
         list-style: none;
         padding: 0;
-        margin: 0 0 5rem 0;
+        margin: 0 0 5.5rem 0;
 
         &-item {
             display: flex;
@@ -27,7 +28,6 @@
             align-items: center;
             width: 50%;
             padding: .5rem 0;
-            font-size: .75rem;
             color: $cloud;
 
         } :active, :hover {
@@ -39,7 +39,7 @@
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
-        padding: 1.5rem 1rem 5rem;
+        padding: 2rem 2rem 8rem;
 
         &__logo {
             margin: 0;
@@ -53,6 +53,6 @@
         }
     }
     @include desktop {
-        padding: 1.5rem 5rem 5rem;
+        padding: 1.5rem 8.125rem 8.125rem;
     }
 }
