Remove height on header and adjust warehouse page with position relative

--- a/src/pages/WarehousePage/WarehousePage.scss
+++ b/src/pages/WarehousePage/WarehousePage.scss
@@ -5,6 +5,8 @@
 .warehouse-page {
     display: flex;
     flex-direction: column;
+    position: relative;
+    bottom: 4rem;
 
     &__header {
         background-color: $graphite;
