--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -24,13 +24,13 @@
     &__details-warehouse{
         border-bottom: 1px solid $cloud;
     }
-    &__details-subheading, &__form {
+    &__details-subheading, &__form-container {
         margin: 0;
         padding: 1rem 1.25rem 0rem;
         display: flex;
         flex-direction: column;
     }
-    &__form {
+    &__form-container {
         padding: 0rem 1.25rem 1.25rem;
     }
     &__label {
@@ -65,7 +65,10 @@
     }
     @include tablet {
         padding: 0 2rem;
-
+        &__forms {
+            display: flex;
+            width: 100%
+        }
         &__card {
             top: -5.9rem;
         }
