--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -34,12 +34,15 @@
         padding: 0rem 1.25rem 1.25rem;
     }
     &__label {
-        padding: .75rem 0 .25rem;
+        padding: .75rem 0 0;
+        display: flex;
+        flex-direction: column;
     }
     &__input {
         border-radius: 30px;
         border: 1px solid $cloud;
         padding: .5rem .75rem;
+        margin-top: .25rem;
     } 
     ::placeholder {
         font: .813rem 'Titillium Web';
@@ -96,7 +99,7 @@
             padding: 0 2rem 0;
         }
         &__label {
-            padding: 2rem 0 .25rem;
+            padding: 2rem 0 0;
         }
         &__input {
             padding: .5rem 1rem;
@@ -138,7 +141,7 @@
             padding: 0 2.5rem 0;
         }
         &__label {
-            padding: 2.875rem 0 .25rem;
+            padding: 2.875rem 0 0;
         }
         &__button-section {
             justify-content: flex-end;
