fixed margin issue

--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -21,7 +21,8 @@
         font-size: 1.5rem;
         border-bottom: 1px solid $cloud;
     }
-    &__details-warehouse{
+    &__details-warehouse {
+        margin-top: 4rem;
         border-bottom: 1px solid $cloud;
     }
     &__details-subheading, &__form-container {
