changed img class name

--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -127,7 +127,7 @@
         ::placeholder {
             font-size: .875rem;
         }
-        img {
+        &__back-icon {
             margin-top: 1rem;
         }
     }
