--- a/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -1,7 +1,7 @@
 @use '../../styles/partials/colors.scss' as *;
 @use '../../styles/partials/breakpoints.scss' as *;
 
-section{
+.warehouse-wrapper{
     position: relative;
     padding: 1rem;
     bottom: 5rem;
