--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -152,13 +152,13 @@
             margin-bottom: 1.875rem;
         }
         &__details-subheading, &__form {
-            padding: 0 2.5rem 0;
+            padding: 0 2.5rem .5rem;
         }
         &__form-container {
             padding: 0 2.5rem 1.5rem;
         }
         &__label {
-            padding: 2.875rem 0 0;
+            padding: 1.5rem 0 0;
         }
         &__button-container {
             justify-content: flex-end;
