Complete header for desktop version of warehouse list page

--- a/src/pages/WarehousePage/WarehousePage.scss
+++ b/src/pages/WarehousePage/WarehousePage.scss
@@ -23,7 +23,9 @@
             padding: 2rem 1rem 1rem 1rem;
         }
 
-       
+       @include desktop {
+        padding: 2rem 1rem 1rem 1rem;
+       }
     }
 
     &__tablet-header {
@@ -31,6 +33,10 @@
             display: flex;
             justify-content: center;
             padding: 0rem 1rem 0 1rem;
+        }
+
+        @include desktop {
+            padding: 0 9.5rem 0 8.5rem;
         }
     }
 
@@ -58,6 +64,10 @@
             width: 80%;
             background-color: $white;
             padding: 2rem 2rem 0 0;
+        }
+
+        @include desktop {
+            padding: 2rem 2rem 0 12rem;
         }
        
     }
