Complete warehouse list component for desktop version of website

--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -8,6 +8,10 @@
     padding: 0 1rem 0 1rem;
     background-color: $light-grey;
 
+    @include desktop {
+        padding: 0 9.5rem 0 8.5rem;
+    }
+
     &__header {
         display: none;
 
