adjusted success message to be responsive

--- a/src/components/AddNewWarehouse/AddNewWarehouse.scss
+++ b/src/components/AddNewWarehouse/AddNewWarehouse.scss
@@ -62,7 +62,6 @@
         background: $light-grey;
         display: flex;
         justify-content: space-between;
-        padding: 1rem 1.5rem;
     }
     &__button-add, &__button-cancel {
         border-radius: 30px;
@@ -76,6 +75,27 @@
     &__button-cancel {
         color: $slate;
         background: $white;
+    }
+    &__form-footer {
+        background: $light-grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 1rem 1.5rem;
+    }
+    &__success {
+        color: rgb(19, 129, 19);
+        font-size: 1rem;
+        order: 3;
+        padding-top: 1rem;
+    }
+    &__success-container {
+        order: 2;
+        display: flex;
+        justify-content: center;
+    }
+    &__success--hidden {
+        display: none;
     }
     @include tablet {
         padding: 0 2rem;
@@ -120,7 +140,6 @@
         } 
         &__button-container {
             justify-content: flex-end;
-            padding-right: 2rem;
         }
         &__button-add, &__button-cancel {
             border-radius: 30px;
@@ -140,6 +159,22 @@
         }
         &__back-icon {
             margin-top: 1rem;
+        }
+        &__success {
+            color: rgb(19, 129, 19);
+            font-size: 1rem;
+            padding-top: 0;
+        }
+        &__success-container {
+            display: flex;
+            align-items: center;
+            padding-left: 17rem;
+        }
+        &__success--hidden {
+            display: none;
+        }
+        &__form-footer {
+            flex-direction: row-reverse;
         }
     }
     @include desktop {
@@ -162,7 +197,12 @@
         }
         &__button-container {
             justify-content: flex-end;
-            padding-right: 2.5rem;
+        }
+        &__form-footer {
+            padding: 1rem 2.5rem;
+        }
+        &__success-container {
+            padding-left: 26rem;
         }
     }
 }
@@ -178,13 +218,4 @@
     @include tablet {
         font-size: .875rem;
     }
-}
-.addNewWarehouse__success {
-    display: flex;
-    align-items: center;
-    padding-right: 8rem;
-    color: rgb(19, 129, 19);
-}
-.addNewWarehouse__success--hidden {
-    display: none;
 }
