Change warehouse details page structure; retrieve data via API call; link warehouse page to warehouse details

--- a/src/components/WarehouseItem/WarehouseItem.scss
+++ b/src/components/WarehouseItem/WarehouseItem.scss
@@ -53,6 +53,7 @@
         align-items: center;
         justify-content: flex-start;
         width: 5rem;
+        text-decoration: none;
 
         @include tablet {
             width: 6.5rem;
