--- a/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -3,14 +3,13 @@
 
 .inventory-details {
 
-    background-color: $graphite;
+    background-color: $light-grey;
     padding: 0 1rem 0 1rem;
 
     &__article {
         position: relative;
         bottom: 4rem;
         background-color: $white;
-        padding: 0 1rem 0 1rem;
         border-radius: 0.1875rem;
     }
 
@@ -23,6 +22,8 @@
         align-items: center;
         justify-content: space-between;
         border-bottom: 0.0625rem solid $cloud;
+        padding: 0 1rem 0 1rem;
+
     }
 
     &__title {
