--- a/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -52,4 +52,55 @@
         height: 0.9375rem;
         background-color: $instock-indigo;
     }
+
+    &__main {
+        padding: 1rem 1rem 0 1rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__box  {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+
+    &__middle {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__label {
+        margin: 0 0 0 0;
+        text-transform: uppercase;
+        color: $slate;
+        font-weight: 600;
+
+    }
+
+    &__data {
+        margin: 0;
+        color: $instock-black;
+    }
+
+    &__status {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 3.8125rem;
+        height: 1.5rem;
+        background-color: rgba(21, 132, 99, 0.07);
+        border-radius: 1.25rem;
+        padding: 0.01rem;
+        margin-top: 0.1rem;
+    }
+
+    &__highlight {
+       color: #158463;
+       text-transform: uppercase;
+       font-weight: 600;
+       margin: 0;
+
+    }
 }
