--- a/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -10,6 +10,11 @@
         padding: 0 2rem 0 2rem;
     }
 
+    @include desktop {
+        padding: 0 8.125rem 0 8.125rem;
+        
+    }
+
     &__article {
         position: relative;
         bottom: 4rem;
@@ -103,7 +108,6 @@
             padding: 0 1rem 0 1rem;
             border-left: 0.0625rem solid $cloud;
         }
-      
     }
 
     &__box  {
